src/objects/Programme__c.object
<CustomObject>
    <fields>
        <fullName>AcademicYear__c</fullName>
        <description>Created by Desa Markovic @Impact Box</description>
        <label>Academic Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>Campus</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Programmes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GCSE</fullName>
                </value>
                <value>
                    <fullName>Functional Skills</fullName>
                </value>
                <value>
                    <fullName>GCSE/Functional Skills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Programme End Date</description>
        <inlineHelpText>Programme End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnglishGCSEExamBoard__c</fullName>
        <label>English GCSE Exam Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Boards</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Exam_1__c</fullName>
        <label>English Exam 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>English_Exam_2__c</fullName>
        <label>English Exam 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exam_Boards__c</fullName>
        <formula>IF(INCLUDES( College__r.Exam_Boards__c, &quot;AQA (Assessment and Qualifications Alliance)&quot;), &quot;AQA (Assessment and Qualifications Alliance)&quot; + BR() , NULL) +
IF(INCLUDES( College__r.Exam_Boards__c , &quot;CIE (University of Cambridge International Examinations)&quot;), &quot;CIE (University of Cambridge International Examinations)	&quot; + BR() , NULL) +
IF(INCLUDES( College__r.Exam_Boards__c , &quot;CCEA (Council for the Curriculum, Examinations &amp; Assessment)&quot;), &quot;CCEA (Council for the Curriculum, Examinations &amp; Assessment)&quot; + BR() , NULL) +
IF(INCLUDES( College__r.Exam_Boards__c, &quot;Edexcel&quot;), &quot;Edexcel&quot; + BR() , NULL) +
IF(INCLUDES( College__r.Exam_Boards__c , &quot;ICAAE (International Curriculum and Assessment Agency Examinations)&quot;), &quot;ICAAE (International Curriculum and Assessment Agency Examinations)&quot;+BR(), NULL) +
IF(INCLUDES( College__r.Exam_Boards__c, &quot;OCR (Oxford, Cambridge and RSA Examinations)&quot;), &quot;OCR (Oxford, Cambridge and RSA Examinations)&quot; + BR() , NULL) +
IF(INCLUDES( College__r.Exam_Boards__c, &quot;WJEC (Welsh Joint Education Committee)	&quot;), &quot;WJEC (Welsh Joint Education Committee)	&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exam Board(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSKEnglishExamboard__c</fullName>
        <label>FSK English Exam board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Boards</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSKMathsExamboard__c</fullName>
        <label>FSK Maths Exam board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Boards</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maths_Exam_Date_1__c</fullName>
        <description>The date of the first Maths exam</description>
        <inlineHelpText>The date of the first Maths exam</inlineHelpText>
        <label>Maths Exam Date 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maths_Exam_Date_2__c</fullName>
        <description>The date of the second Maths exam</description>
        <inlineHelpText>The date of the second Maths exam</inlineHelpText>
        <label>Maths Exam Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maths_Exam_Date_3__c</fullName>
        <description>The date of the third Maths exam</description>
        <inlineHelpText>The date of the third Maths exam</inlineHelpText>
        <label>Maths Exam Date 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maths_GCSE_Exam_board__c</fullName>
        <label>Maths GCSE Exam board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Boards</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Year Programme</fullName>
                </value>
                <value>
                    <fullName>Half-Year Programme</fullName>
                </value>
                <value>
                    <fullName>Autumn Programme</fullName>
                </value>
                <value>
                    <fullName>November Programme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provisioning_Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Staff member responsible for confirming provision</description>
        <inlineHelpText>Staff member responsible for confirming provision</inlineHelpText>
        <label>Provisioning Staff Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programmes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_1_Date__c</fullName>
        <inlineHelpText>Please enter in the Revision Booster 1 Date.</inlineHelpText>
        <label>Revision Booster 1 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_1_Location__c</fullName>
        <inlineHelpText>Revision Booster Location 1.</inlineHelpText>
        <label>Revision Booster 1 Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_1_Room__c</fullName>
        <inlineHelpText>Please enter Room for Revision Booster 1</inlineHelpText>
        <label>Revision Booster 1 Room</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_2_Date__c</fullName>
        <inlineHelpText>Please enter in the Revision Booster 2 Date.</inlineHelpText>
        <label>Revision Booster 2 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_2_Location__c</fullName>
        <inlineHelpText>Revision Booster Location 2.</inlineHelpText>
        <label>Revision Booster 2 Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_2_Room__c</fullName>
        <inlineHelpText>Please enter Room for Revision Booster 2</inlineHelpText>
        <label>Revision Booster 2 Room</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_3_Date__c</fullName>
        <inlineHelpText>Please enter in the Revision Booster 3 Date.</inlineHelpText>
        <label>Revision Booster 3 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_3_Location__c</fullName>
        <inlineHelpText>Revision Booster Location 3.</inlineHelpText>
        <label>Revision Booster 3 Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_3_Room__c</fullName>
        <inlineHelpText>Please enter Room for Revision Booster 3</inlineHelpText>
        <label>Revision Booster 3 Room</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Programme start date</description>
        <inlineHelpText>Programme start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject_Preferences__c</fullName>
        <label>Subject Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_1_End_Date__c</fullName>
        <description>The end date of Term 1</description>
        <inlineHelpText>Please enter in the end date of Term 1</inlineHelpText>
        <label>Term 1 End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_1_First_English_Session_Date__c</fullName>
        <label>Term 1 First English Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_1_First_Maths_Session_Date__c</fullName>
        <label>Term 1 First Maths Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_1_Start_Date__c</fullName>
        <description>The first day of Term 1</description>
        <inlineHelpText>Please enter in the start date for Term 1</inlineHelpText>
        <label>Term 1 Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_2_End_Date__c</fullName>
        <description>The end date of Term 2</description>
        <inlineHelpText>Please enter in the end date of Term 2</inlineHelpText>
        <label>Term 2 End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_2_First_English_Session_Date__c</fullName>
        <label>Term 2 First English Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_2_First_Maths_Session_Date__c</fullName>
        <label>Term 2 First Maths Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_2_Start_Date__c</fullName>
        <description>The start date of Term 2</description>
        <inlineHelpText>Please enter in the start date of Term 2</inlineHelpText>
        <label>Term 2 Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_3_End_Date__c</fullName>
        <description>The end date of Term 3</description>
        <inlineHelpText>Please enter in the end date of Term 3</inlineHelpText>
        <label>Term 3 End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_3_First_English_Session_Date__c</fullName>
        <label>Term 3 First English Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_3_First_Maths_Session_Date__c</fullName>
        <label>Term 3 First Maths Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_3_Start_Date__c</fullName>
        <description>The start date of Term 3</description>
        <inlineHelpText>Please enter in the start date of Term 3</inlineHelpText>
        <label>Term 3 Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Students_Registered__c</fullName>
        <description>Rollup summary field for total number of students registered on the programme</description>
        <label>Total Students Registered</label>
        <summaryForeignKey>Registered_Students__c.Programme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GCSE</fullName>
                </value>
                <value>
                    <fullName>Core Skills</fullName>
                </value>
                <value>
                    <fullName>A Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearGroup__c</fullName>
        <description>The year group this cohort is for.

created by Desa Markovic @Impact Box</description>
        <label>Year Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cohort</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cohort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Confirm_English_Exam1_Dates</fullName>
        <active>false</active>
        <description>If English is as a subject, then both english exam dates must be set</description>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;English&quot;) &amp;&amp;  ISNULL(English_Exam_1__c )</errorConditionFormula>
        <errorMessage>The programme contains English as a subject.  Please ensure that you have entered in the first exam date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirm_English_Exam2_Dates</fullName>
        <active>false</active>
        <description>If English is as a subject, then both english exam dates must be set</description>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;English&quot;) &amp;&amp;  ISNULL(English_Exam_2__c )</errorConditionFormula>
        <errorMessage>The programme contains English as a subject.  Please ensure that you have entered in the last exam date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirm_Maths_Exam1_Dates</fullName>
        <active>false</active>
        <description>If Maths is a subject, then all Maths exam dates must be set</description>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;Maths&quot;) &amp;&amp;  ISNULL( Maths_Exam_Date_1__c  )</errorConditionFormula>
        <errorMessage>The programme contains Maths as a subject.  Please ensure that you have entered in the first exam date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirm_Maths_Exam2_Dates</fullName>
        <active>false</active>
        <description>If Maths is a subject, then all Maths exam dates must be set</description>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;Maths&quot;) &amp;&amp;  ISNULL( Maths_Exam_Date_2__c  )</errorConditionFormula>
        <errorMessage>The programme contains Maths as a subject.  Please ensure that you have entered in the second exam date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirm_Maths_Exam3_Dates</fullName>
        <active>false</active>
        <description>If Maths is a subject, then all Maths exam dates must be set</description>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;Maths&quot;) &amp;&amp;  ISNULL(  Maths_Exam_Date_3__c   )</errorConditionFormula>
        <errorMessage>The programme contains Maths as a subject.  Please ensure that you have entered in the last exam date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exam_2_After_Exam_1</fullName>
        <active>false</active>
        <description>Exam 2 date is after Exam 1 date</description>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;English&quot;) &amp;&amp; English_Exam_1__c &gt;= English_Exam_2__c</errorConditionFormula>
        <errorMessage>The English Exam Date 2 must be after the English Exam Date 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maths_Exam_2_1</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;Maths&quot;) &amp;&amp; Maths_Exam_Date_1__c &gt;=  Maths_Exam_Date_2__c</errorConditionFormula>
        <errorMessage>The second maths exam must be after the first maths exam</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maths_Exam_3_2</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES(Subject_Preferences__c, &quot;Maths&quot;) &amp;&amp; Maths_Exam_Date_2__c &gt;=  Maths_Exam_Date_3__c</errorConditionFormula>
        <errorMessage>The third maths exam must be after the second maths exam</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Term_1_2</fullName>
        <active>false</active>
        <description>Ensure Term 2 starts after Term 1 end date</description>
        <errorConditionFormula>Term_2_Start_Date__c &lt;=  Term_1_End_Date__c</errorConditionFormula>
        <errorMessage>The Term 2 start date must occur after Term 1 has ended</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Term_2_3</fullName>
        <active>false</active>
        <description>Ensure Term 3 starts after Term 2 end date</description>
        <errorConditionFormula>Term_3_Start_Date__c &lt;=  Term_2_End_Date__c</errorConditionFormula>
        <errorMessage>The Term 3 start date must occur after Term 2 has ended</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Term_3_4</fullName>
        <active>true</active>
        <description>Ensure Term 4 starts after Term 3 end date</description>
        <errorConditionFormula>Term_4_Start_Date__c &lt;=  Term_3_End_Date__c</errorConditionFormula>
        <errorMessage>The Term 3 start date must occur after Term 2 has ended</errorMessage>
    </validationRules>
</CustomObject>